dist/1.0/bin/sample/retrieveUnpackaged/objects/Contract_Agreement__c.object
<CustomObject>
    <description>Contract Agreement stores information to be placed in printed version of Contract.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Telephone_Number__c</fullName>
        <description>Telephone number assigned to the Subscriber by the Provider for the Service</description>
        <inlineHelpText>Telephone number assigned to the Subscriber by the Provider for the Service</inlineHelpText>
        <label>Assigned Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <label>Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Contract Agreements</relationshipLabel>
        <relationshipName>Contract_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Surname (Name of company)</description>
        <inlineHelpText>Surname (Name of company)</inlineHelpText>
        <label>Name / Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Bandwidth__c</fullName>
        <label>Connection Bandwidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <formula>CContract__r.ContractTerm__c</formula>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Agreements</relationshipLabel>
        <relationshipName>Contract_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Provisions__c</fullName>
        <label>Final Provisions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_VPN_Access__c</fullName>
        <description>GTS Slovakia access node</description>
        <inlineHelpText>GTS Slovakia access node</inlineHelpText>
        <label>IP VPN Access</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_VPN_Address__c</fullName>
        <description>Site of installation (address)</description>
        <inlineHelpText>Site of installation (address)</inlineHelpText>
        <label>IP VPN Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_VPN_Bandwidth__c</fullName>
        <label>IP VPN Bandwidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_VPN_Connection__c</fullName>
        <description>Means of connection</description>
        <inlineHelpText>Means of connection</inlineHelpText>
        <label>IP VPN Connection</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_VPN_Interface__c</fullName>
        <label>IP VPN Interface</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_VPN_Other_Parameters__c</fullName>
        <label>IP VPN Other Parameters</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoicing_Address__c</fullName>
        <label>Invoicing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contract Agreements</relationshipLabel>
        <relationshipName>Contract_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoicing_Street__c</fullName>
        <formula>Invoicing_Address__r.Street_1__c &amp;&quot; &quot;&amp; Invoicing_Address__r.Street_2__c &amp;&quot; &quot;&amp; Invoicing_Address__r.Street_No__c</formula>
        <label>Invoicing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_Town__c</fullName>
        <formula>Invoicing_Address__r.City__c</formula>
        <label>Invoicing Town</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_ZIP__c</fullName>
        <formula>Invoicing_Address__r.Postal_Code__c</formula>
        <label>Invoicing ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_contract_number__c</fullName>
        <formula>CContract__r.Local_contract_number__c</formula>
        <label>Local contract number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Parameters__c</fullName>
        <label>Other Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_A_Access_Node__c</fullName>
        <description>Point A - GTS Slovakia access node</description>
        <label>Point A Access Node</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_A_Address__c</fullName>
        <description>Point A - site of installation (address)</description>
        <inlineHelpText>Point A - site of installation (address)</inlineHelpText>
        <label>Point A Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_A_Connection__c</fullName>
        <description>Point A - means of connection</description>
        <inlineHelpText>Point A - means of connection</inlineHelpText>
        <label>Point A Connection</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_A_Data_Interface__c</fullName>
        <description>Point A interface – data services</description>
        <inlineHelpText>Point A interface – data services</inlineHelpText>
        <label>Point A Data Interface</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_A_Phone_Interface__c</fullName>
        <description>Point A interface – telephone services</description>
        <inlineHelpText>Point A interface – telephone services</inlineHelpText>
        <label>Point A Phone Interface</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_B_Access_Node__c</fullName>
        <description>Point B - GTS Slovakia access node</description>
        <inlineHelpText>Point B - GTS Slovakia access node</inlineHelpText>
        <label>Point B Access Node</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_B_Address__c</fullName>
        <description>Point B - site of installation (address)</description>
        <inlineHelpText>Point B - site of installation (address)</inlineHelpText>
        <label>Point B Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_B_Connection__c</fullName>
        <description>Point B - means of connection</description>
        <inlineHelpText>Point B - means of connection</inlineHelpText>
        <label>Point B Connection</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_B_Interface__c</fullName>
        <description>Point B - interface</description>
        <label>Point B Interface</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Address__c</fullName>
        <label>Provider Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Banking_Instruction__c</fullName>
        <description>Bank name and bank account number</description>
        <inlineHelpText>Bank name and bank account number</inlineHelpText>
        <label>Provider Banking Instruction</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Company_Register__c</fullName>
        <description>Provider registered in the Companies&apos; Register (from Provider&apos;s Country Related Data)</description>
        <inlineHelpText>Provider registered in the Companies&apos; Register (from Provider&apos;s Country Related Data)</inlineHelpText>
        <label>Provider Company Register</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Company_Registration_ID__c</fullName>
        <description>Company registration number</description>
        <inlineHelpText>Company registration number</inlineHelpText>
        <label>Provider Company Registration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Provider Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Fax__c</fullName>
        <label>Provider Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Phone__c</fullName>
        <label>Provider Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Representing_Person__c</fullName>
        <formula>CContract__r.CompanySigned__r.FirstName &amp;&quot; &quot;&amp; CContract__r.CompanySigned__r.LastName</formula>
        <label>Provider Representing Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Signed_By__c</fullName>
        <formula>CContract__r.CompanySigned__r.FirstName &amp;&quot; &quot;&amp; CContract__r.CompanySigned__r.LastName</formula>
        <label>Provider Signed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Signed_Date__c</fullName>
        <formula>TEXT(CContract__r.CompanySignedDate__c)</formula>
        <label>Provider Signed Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Tax_Registration_ID__c</fullName>
        <description>VAT Number from Provider&apos;s Country Related data</description>
        <inlineHelpText>VAT Number from Provider&apos;s Country Related data</inlineHelpText>
        <label>Provider Tax Registration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address__c</fullName>
        <formula>CContract__r.Billing_Street_1__c &amp;


IF (NOT(ISBLANK(CContract__r.Billing_Street_2__c)),&apos; &apos;&amp;CContract__r.Billing_Street_2__c ,&apos;&apos;) 



&amp;&quot; &quot;&amp; CContract__r.Billing_Street_No__c &amp;&quot;, &quot;&amp; CContract__r.Billing_City__c &amp;&quot;, &quot; &amp; CContract__r.Billing_Postal__c &amp;



IF (NOT(ISBLANK(CContract__r.Billing_State_Province__c)),&apos; &apos;&amp;CContract__r.Billing_State_Province__c,&apos;&apos;)




&amp;&quot;, &quot;&amp;TEXT(CContract__r.Billing_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Banking_Instruction__c</fullName>
        <formula>CContract__r.Account__r.BankName__r.Name  &amp;&quot;, &quot;&amp;  CContract__r.Account__r.Bank_account_number__c</formula>
        <label>Subscriber Banking Instruction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Company_Register__c</fullName>
        <description>Provider registered in the Companies&apos; Register (from Provider&apos;s Country Related Data)</description>
        <inlineHelpText>Provider registered in the Companies&apos; Register (from Provider&apos;s Country Related Data)</inlineHelpText>
        <label>Subscriber Company Register</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Company_Registration_ID__c</fullName>
        <description>Supscriber&apos;s Company registration number</description>
        <inlineHelpText>Supscriber&apos;s Company registration number</inlineHelpText>
        <label>Subscriber Company Registration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <label>Subscriber Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Fax__c</fullName>
        <formula>CContract__r.Account__r.Fax</formula>
        <label>Subscriber Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Financial_Contact__c</fullName>
        <label>Subscriber Financial Contact</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <description>Registration Customer Name</description>
        <formula>CContract__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Registration Customer Name</inlineHelpText>
        <label>Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <formula>CContract__r.Account__r.Phone</formula>
        <label>Subscriber Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Representing_Person_Title__c</fullName>
        <formula>CContract__r.CustomerSignedTitle__c</formula>
        <label>Subscriber Representing Person Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Representing_Person__c</fullName>
        <formula>CContract__r.CustomerSigned__r.FirstName &amp;&quot; &quot;&amp; CContract__r.CustomerSigned__r.LastName</formula>
        <label>Subscriber Representing Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Sales_Contact__c</fullName>
        <label>Subscriber Sales Contact</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Signed_By__c</fullName>
        <formula>CContract__r.CustomerSigned__r.FirstName &amp;&quot; &quot;&amp; CContract__r.CustomerSigned__r.LastName</formula>
        <label>Subscriber Signed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Signed_Date__c</fullName>
        <formula>TEXT(CContract__r.CustomerSignedDate__c)</formula>
        <label>Subscriber Signed Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Signed_In__c</fullName>
        <formula>CContract__r.Billing_City__c</formula>
        <label>Subscriber Signed In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Signed_Title__c</fullName>
        <formula>CContract__r.CustomerSignedTitle__c</formula>
        <label>Subscriber Signed Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Tax_Registration_ID__c</fullName>
        <description>VAT Number from Subscriber&apos;s Country Related Data</description>
        <inlineHelpText>VAT Number from Subscriber&apos;s Country Related Data</inlineHelpText>
        <label>Subscriber Tax Registration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Technical_Contact__c</fullName>
        <label>Subscriber Technical Contact</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer agrees with publication of telephone numbers and other data in telephone directories</description>
        <inlineHelpText>Customer agrees with publication of telephone numbers and other data in telephone directories</inlineHelpText>
        <label>Telephone Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telephone_Numbers__c</fullName>
        <label>Telephone Numbers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_Circuit__c</fullName>
        <label>Type Of Circuit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Service__c</fullName>
        <label>Type Of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Voice-Public Telephone Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Access-Connection to Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Line-Lease of Data Circuits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN-Virtual Private Data Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Phone-Supp. Telephone Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Cost-Supp. Telephone Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Voice_Channels__c</fullName>
        <description>Number of voice channels</description>
        <inlineHelpText>Number of voice channels</inlineHelpText>
        <label>Voice Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voice_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voice Service</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Agreement</label>
    <nameField>
        <label>Contract Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>